--- a/package.json
+++ b/package.json
@@ -15,17 +15,25 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@callstack/react-theme-provider": "^3.0.9",
     "@expo/vector-icons": "^14.0.0",
-    "@react-navigation/native": "^6.0.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@reduxjs/toolkit": "^2.2.5",
+    "@shopify/flash-list": "^1.6.4",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "axios": "^1.7.2",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~51.0.8",
     "expo-constants": "~16.0.1",
-    "expo-font": "~12.0.5",
+    "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
+    "moti": "^0.29.0",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
@@ -33,7 +41,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -42,6 +51,7 @@
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.2",
+    "prettier": "3.2.5",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
