--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-constants": "~16.0.1",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
+    "expo-notifications": "~0.28.4",
     "expo-router": "~3.5.14",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
